--- a/src/components/Reviews/Reviews.css
+++ b/src/components/Reviews/Reviews.css
@@ -15,6 +15,7 @@
 }
 
 .home-header {
+    line-height: 2.5rem;
     font-family: 'Vollkorn SC', serif;
     font-size: 2.2rem;
 }
@@ -31,7 +32,12 @@
 }
 
 .testimonials-header {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
+}
+
+.testimonials-subheader {
+    line-height: 1.8rem;
+    margin-top: 0px;
 }
 
 .leave-review-testimonials {
@@ -153,6 +159,7 @@
 }
 
 .review-text {
+    line-height: 1.8rem;
     margin: 10px 0px;
     height: 120px;
     overflow-y: auto;
